--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,5 +1,11 @@
-* {
+*,
+*:before,
+*:after {
     box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
 }
 
 body {
@@ -10,7 +16,6 @@ body {
         sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    min-height: 100vh;
     background: #000;
 }
 
